# cpp_projects

Average/: Average.hpp  main.cpp
Prime/: Prime.cpp  Prime.hpp  main.cpp
RSA/: .gitignore  CMakeLists.txt
RSA/include/: BigInt.hpp  Prime.hpp
RSA/main/: RSA.cpp  factorization.cpp
RSA/primes/: download_primes.py
RSA/src/: BigInt.cpp  Prime.cpp
embed_resource/: CMakeLists.txt  embed_resource.txt  main.cpp
embed_resource/include/: test.h
